[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/alien_area2d.gd" type="Script" id=1]
[ext_resource path="res://Textures/alien_enemy.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 12.5

[node name="alien_area2d" type="Area2D" groups=[
"enemy",
]]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.3, 0, 0, 0.4, 0, 3 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="alien_sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 3 )
transform/scale = Vector2( 0.3, 0.4 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="blood_particle" type="Particles2D" parent="."]

config/amount = 60
config/lifetime = 0.3
config/emit_timeout = 0.2
config/emitting = false
config/process_mode = 1
params/direction = 0.0
params/spread = 360.0
params/linear_velocity = 20.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
color/color = Color( 0.921875, 0.0576172, 0.0576172, 1 )

[node name="Position2D" type="Position2D" parent="."]

transform/pos = Vector2( 0, -6.5 )
transform/scale = Vector2( 0.149681, 0.172111 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

transform/pos = Vector2( -10, -10 )
rect = Rect2( 9, 9, 2, 2 )

[connection signal="area_enter" from="." to="." method="_on_alien_area2d_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_alien_area2d_body_enter"]

[connection signal="enter_screen" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_enter_screen"]


